# cmake_basic

./: .cproject  .gitignore  .project  CMakeLists.txt
lib/: CMakeLists.txt  printlib.c
src/: CMakeLists.txt  cmake_basic.cpp  printlib.h
